# interesting-stuff

./: CPU_Loader.py  CPU_loader_with_timer.py  Even_Groups.py  Hash_Collisions.py  Josephus_Permutation.py  List_Comprehension_Speed.py  Monty_Hall_Problem.py  Move_Values_Permutations.py  Paralellism_for_CPU_bound_tasks.py  Primes_With_Dijkstra.py  README.md  Ratio calculator.py  pyproject.toml  socks5_proxy.py  temperatures_changes.py
ChatGPT_Challenges/: Is_Palindrome.py  README.md
ChatGPT_Challenges/Is_Prime/: Is_Prime.py  Is_Prime_Parallel.py  Miller-Rabin_Primality_Test.py
Hash_Collisions/: Collision_Finder.py  Processes_Manager.py  main.py
LeetCode/: README.md
LeetCode/Add Two Numbers/: README.md  solution.py
LeetCode/Longest Substring Without Repeating Characters/: README.md  solution.py
LeetCode/Median of Two Sorted Arrays/: README.md  solution.py
LeetCode/Two Sum/: README.md  solution.py
LeetCode/Zigzag Conversion/: README.md  solution.py
